# mcpapp-test-dx

./: AGENTS.md  Cargo.toml  Dioxus.toml  MCPAPP_SPEC.md
assets/: tailwind.css
src/: client.rs  main.rs  rhai_ui.rs  server.rs
src/host/: connection.rs  manager.rs  mod.rs  transport.rs
src/protocol/: capabilities.rs  lifecycle.rs  messages.rs  mod.rs  resources.rs
src/ui/: bridge.rs  html_view.rs  mod.rs  rhai_renderer.rs
