[package]
name = "dioxus-desktop-barebones"
version = "0.1.0"
authors = ["babybirdprd <babybirdprd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
rmcp = "0.14.0"
rhai = { version = "1.19.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
dashmap = "6.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
log = "0.4"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server-binary = []

[[bin]]
name = "mcp-server"
path = "src/server.rs"
required-features = ["server-binary"]
